crates/ark-lsp-core/src/lsp/snapshots/ark_lsp_core__lsp__symbols__tests__symbol_call_arguments.snap
---
source: crates/ark-lsp-core/src/lsp/symbols.rs
assertion_line: 1137
expression: "test_symbol(\"\n# section ----\nlocal({\n    a <- function() {\n        1\n    }\n})\n\")"
---
[
    DocumentSymbol {
        name: "section",
        detail: None,
        kind: String,
        tags: None,
        deprecated: None,
        range: Range {
            start: Position {
                line: 1,
                character: 0,
            },
            end: Position {
                line: 6,
                character: 2,
            },
        },
        selection_range: Range {
            start: Position {
                line: 1,
                character: 0,
            },
            end: Position {
                line: 6,
                character: 2,
            },
        },
        children: Some(
            [
                DocumentSymbol {
                    name: "a",
                    detail: Some(
                        "function()",
                    ),
                    kind: Function,
                    tags: None,
                    deprecated: None,
                    range: Range {
                        start: Position {
                            line: 3,
                            character: 4,
                        },
                        end: Position {
                            line: 5,
                            character: 5,
                        },
                    },
                    selection_range: Range {
                        start: Position {
                            line: 3,
                            character: 4,
                        },
                        end: Position {
                            line: 5,
                            character: 5,
                        },
                    },
                    children: Some(
                        [],
                    ),
                },
            ],
        ),
    },
]
