crates/ark-lsp-core/src/lsp/snapshots/ark_lsp_core__lsp__symbols__tests__symbol_call_methods.snap
---
source: crates/ark-lsp-core/src/lsp/symbols.rs
assertion_line: 1109
expression: "test_symbol(\"\n# section ----\nlist(\n    foo = function() {\n        1\n        # nested section ----\n        nested <- function() {}\n    }, # matched\n    function() {\n        2\n        # `nested` is a symbol even if the unnamed method is not\n        nested <- function () {\n    }\n    }, # not matched\n    bar = function() {\n        3\n    }, # matched\n    baz = (function() {\n        4\n    }) # not matched\n)\n\")"
---
[
    DocumentSymbol {
        name: "section",
        detail: None,
        kind: String,
        tags: None,
        deprecated: None,
        range: Range {
            start: Position {
                line: 1,
                character: 0,
            },
            end: Position {
                line: 20,
                character: 1,
            },
        },
        selection_range: Range {
            start: Position {
                line: 1,
                character: 0,
            },
            end: Position {
                line: 20,
                character: 1,
            },
        },
        children: Some(
            [
                DocumentSymbol {
                    name: "foo",
                    detail: Some(
                        "function()",
                    ),
                    kind: Method,
                    tags: None,
                    deprecated: None,
                    range: Range {
                        start: Position {
                            line: 3,
                            character: 10,
                        },
                        end: Position {
                            line: 7,
                            character: 5,
                        },
                    },
                    selection_range: Range {
                        start: Position {
                            line: 3,
                            character: 10,
                        },
                        end: Position {
                            line: 7,
                            character: 5,
                        },
                    },
                    children: Some(
                        [
                            DocumentSymbol {
                                name: "nested section",
                                detail: None,
                                kind: String,
                                tags: None,
                                deprecated: None,
                                range: Range {
                                    start: Position {
                                        line: 5,
                                        character: 8,
                                    },
                                    end: Position {
                                        line: 6,
                                        character: 31,
                                    },
                                },
                                selection_range: Range {
                                    start: Position {
                                        line: 5,
                                        character: 8,
                                    },
                                    end: Position {
                                        line: 6,
                                        character: 31,
                                    },
                                },
                                children: Some(
                                    [
                                        DocumentSymbol {
                                            name: "nested",
                                            detail: Some(
                                                "function()",
                                            ),
                                            kind: Function,
                                            tags: None,
                                            deprecated: None,
                                            range: Range {
                                                start: Position {
                                                    line: 6,
                                                    character: 8,
                                                },
                                                end: Position {
                                                    line: 6,
                                                    character: 31,
                                                },
                                            },
                                            selection_range: Range {
                                                start: Position {
                                                    line: 6,
                                                    character: 8,
                                                },
                                                end: Position {
                                                    line: 6,
                                                    character: 31,
                                                },
                                            },
                                            children: Some(
                                                [],
                                            ),
                                        },
                                    ],
                                ),
                            },
                        ],
                    ),
                },
                DocumentSymbol {
                    name: "nested",
                    detail: Some(
                        "function()",
                    ),
                    kind: Function,
                    tags: None,
                    deprecated: None,
                    range: Range {
                        start: Position {
                            line: 11,
                            character: 8,
                        },
                        end: Position {
                            line: 12,
                            character: 5,
                        },
                    },
                    selection_range: Range {
                        start: Position {
                            line: 11,
                            character: 8,
                        },
                        end: Position {
                            line: 12,
                            character: 5,
                        },
                    },
                    children: Some(
                        [],
                    ),
                },
                DocumentSymbol {
                    name: "bar",
                    detail: Some(
                        "function()",
                    ),
                    kind: Method,
                    tags: None,
                    deprecated: None,
                    range: Range {
                        start: Position {
                            line: 14,
                            character: 10,
                        },
                        end: Position {
                            line: 16,
                            character: 5,
                        },
                    },
                    selection_range: Range {
                        start: Position {
                            line: 14,
                            character: 10,
                        },
                        end: Position {
                            line: 16,
                            character: 5,
                        },
                    },
                    children: Some(
                        [],
                    ),
                },
            ],
        ),
    },
]
