crates/ark-lsp-core/src/lsp/snapshots/ark_lsp_core__lsp__symbols__tests__symbol_nested_assignments.snap
---
source: crates/ark-lsp-core/src/lsp/symbols.rs
assertion_line: 1182
expression: "test_symbol(\"\nlocal({\n  inner1 <- 1            # Not a symbol\n})\na <- function() {\n  inner2 <- 2            # Not a symbol\n  inner3 <- function() 3 # Symbol\n}\nouter <- 4\n\")"
---
[
    DocumentSymbol {
        name: "a",
        detail: Some(
            "function()",
        ),
        kind: Function,
        tags: None,
        deprecated: None,
        range: Range {
            start: Position {
                line: 4,
                character: 0,
            },
            end: Position {
                line: 7,
                character: 1,
            },
        },
        selection_range: Range {
            start: Position {
                line: 4,
                character: 0,
            },
            end: Position {
                line: 7,
                character: 1,
            },
        },
        children: Some(
            [
                DocumentSymbol {
                    name: "inner3",
                    detail: Some(
                        "function()",
                    ),
                    kind: Function,
                    tags: None,
                    deprecated: None,
                    range: Range {
                        start: Position {
                            line: 6,
                            character: 2,
                        },
                        end: Position {
                            line: 6,
                            character: 24,
                        },
                    },
                    selection_range: Range {
                        start: Position {
                            line: 6,
                            character: 2,
                        },
                        end: Position {
                            line: 6,
                            character: 24,
                        },
                    },
                    children: Some(
                        [],
                    ),
                },
            ],
        ),
    },
    DocumentSymbol {
        name: "outer",
        detail: None,
        kind: Variable,
        tags: None,
        deprecated: None,
        range: Range {
            start: Position {
                line: 8,
                character: 0,
            },
            end: Position {
                line: 8,
                character: 10,
            },
        },
        selection_range: Range {
            start: Position {
                line: 8,
                character: 0,
            },
            end: Position {
                line: 8,
                character: 10,
            },
        },
        children: Some(
            [],
        ),
    },
]
